# global-macro-workbench

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  workbench.py
config/: series.yaml
macro_workbench/: __init__.py  akshare_source.py  data_router.py  main_cli.py  memo.py  models.py  openbb_source.py  paths.py  pipeline.py  storage.py  streamlit_app.py  tsanghi_source.py  validation.py  yfinance_latest.py
tests/: test_akshare_source.py  test_data_router.py  test_incremental_store.py  test_openbb_source.py  test_paths.py  test_workflow.py
