[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "global-macro-workbench"
version = "0.1.0"
description = "可追溯的全球宏观策略工作台"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.18.64",
  "duckdb>=1.1",
  "httpx>=0.27",
  "numpy>=1.26",
  "openbb>=4.4",
  "openbb-fred>=1.4",
  "openbb-yfinance>=1.4",
  "pandas>=2.2",
  "plotly>=5.24",
  "pyarrow>=17",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "streamlit>=1.39",
  "yfinance>=0.2.44",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7"]

[project.scripts]
macro-workbench = "macro_workbench.main_cli:main"

[tool.setuptools.packages.find]
include = ["macro_workbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
